where to next shop button

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
       <a href="https://shop.grimmandco.co.uk/">
         <img src="images/grimm_and_co_apothecary_reduced.gif" class="wtn-shop-img">
       </a>
+      <a href="https://shop.grimmandco.co.uk/" class="wtn-shop-link">
+        Visit the Shop →
+      </a>
     </div>
 
     <div class="wtn-writers-pad">
